# example-nlp-project

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/: main.py
