[tool.poetry]
name = "ner-service"
version = "0.1.0"
description = "This is an example NER service for a YouTube video."
authors = ["Mike Nemke <mike@mktr.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^2.3.2"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz" }
fastapi = "^0.61.1"
uvicorn = "^0.12.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
